# pq-sift-defender

./: .env.example  .gitignore  .pre-commit-config.yaml  NOTICE  README.md  pyproject.toml
agent_logs/: demo-finetuned-20260601.txt  eval-20260506-032828.jsonl  eval-20260531-030103.jsonl
demo/: README.md  demo.cast  narrated.cast  narration.txt  run_demo.sh  run_narrated_demo.sh
docs/: TESTING_STATUS_20260531.md  accuracy.md  architecture.md  description.md  devpost-submission.md  try-it-out.md
docs/archive/: README_v0.1.0.md
evidence/: README.md
samples/: README.md  adversarial_benign_cmd_lookalike.json  adversarial_benign_path_traversal_lookalike.json  adversarial_benign_ssrf_lookalike.json  ambiguous_high_sev_backup.json  ambiguous_high_sev_pentest.json  audit_chain_export.json  benign_disk_image_backup.json  benign_internal_monitoring_ip.json  benign_k8s_health_check.json  benign_log_rotation.json  benign_login_alert.json  benign_memory_dump_backup.json  benign_proc_monitor.json  clean_health_check.json  cloud_metadata_ssrf.json  command_injection.json  malware_memory_dump.json  multi_vector_attack.json  path_traversal.json  prompt_injection_alert.json  shadow_file_read.json  ssrf_sqli_probe.json
scripts/: check_pre_push.sh  check_vocab.sh  export_audit_chain.py  regrade.py  run_eval.py
src/pq_sift_defender/: __init__.py  cli.py
tests/fixtures/: sample_alert.json
tests/integration/: test_pq_live.py  test_sg_live.py
tests/unit/: test_agent_boundary_filter.py  test_attack_overlay.py  test_audit_chain.py  test_clamav_wrapper.py  test_plaso_wrapper.py  test_pq_client.py  test_sg_client.py  test_sift_prefilter.py  test_sleuthkit_wrapper.py  test_volatility_wrapper.py  test_yara_wrapper.py
training/: GROK_TRAINING_DATA_PROMPTS.md  README.md
training/configs/: base.yml
training/data/: GENERATION_SUMMARY.md  batch_1_benign_pass.jsonl  batch_2_attack_block.jsonl  batch_3_boundary_recovery.jsonl  (+8 more)
(+28 files in other folders)
